--- a/package.json
+++ b/package.json
@@ -24,14 +24,27 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node server/index.js",
-    "localhost": "MONGO_URL=mongodb://localhost/angular-prototype-prod PORT=3333 nodemon -e js,jade server/index.js",
+    "localhost": "PORT=3333 nodemon -e js,jade server/index.js",
     "preinstall": "rm -rf node_modules public",
-    "postinstall": "bower install && gulp build",
-    "test": "MONGO_URL=mongodb://localhost/angular-prototype-test lab -l -v -m 5000 test/unit test/acceptance"
+    "postinstall": "bower install && gulp build"
   },
   "license": "MIT",
   "dependencies": {
+    "good": "^5.1.2",
+    "good-console": "^4.1.0",
+    "hapi": "^8.4.0"
   },
   "devDependencies": {
+    "bower": "^1.3.12",
+    "gulp": "^3.8.11",
+    "gulp-babel": "^4.0.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-copy": "0.0.2",
+    "gulp-jade": "^1.0.0",
+    "gulp-jshint": "^1.9.2",
+    "gulp-less": "^3.0.1",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-watch": "^4.1.1",
+    "jshint-stylish": "^1.0.1"
   }
 }
